updates to simulation section

--- a/references.bib
+++ b/references.bib
@@ -10818,3 +10818,38 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   keywords = {Statistics - Applications,Statistics - Methodology},
   file = {/home/work/Zotero/storage/95R7WT75/Ding - 2023 - A First Course in Causal Inference.pdf;/home/work/Zotero/storage/LHRMHRPM/2305.html}
 }
+
+@article{raineyCarefulConsiderationCLARIFY2024,
+  title = {A Careful Consideration of {{CLARIFY}}: Simulation-Induced Bias in Point Estimates of Quantities of Interest},
+  shorttitle = {A Careful Consideration of {{CLARIFY}}},
+  author = {Rainey, Carlisle},
+  year = {2024},
+  month = jul,
+  journal = {Political Science Research and Methods},
+  volume = {12},
+  number = {3},
+  pages = {614--623},
+  issn = {2049-8470, 2049-8489},
+  doi = {10.1017/psrm.2023.8},
+  urldate = {2024-09-02},
+  abstract = {Some work in political methodology recommends that applied researchers obtain point estimates of quantities of interest by simulating model coefficients, transforming these simulated coefficients into simulated quantities of interest, and then averaging the simulated quantities of interest (e.g., CLARIFY). But other work advises applied researchers to directly transform coefficient estimates to estimate quantities of interest. I point out that these two approaches are not interchangeable and examine their properties. I show that the simulation approach compounds the transformation-induced bias identified by Rainey (2017), adding bias with direction and magnitude similar to the transformation-induced bias. I refer to this easily avoided additional bias as ``simulation-induced bias.'' Even if researchers use simulation to estimate standard errors, they should directly transform maximum likelihood estimates of coefficient estimates to obtain point estimates of quantities of interest.},
+  langid = {english},
+  keywords = {Maximum likelihood estimation (MLE)},
+  file = {/home/work/Zotero/storage/AW6BWEP4/Rainey - 2024 - A careful consideration of CLARIFY simulation-induced bias in point estimates of quantities of inte.pdf}
+}
+
+@article{foxSASCodeProbabilistic2023,
+  title = {{{SAS}} and {{R}} Code for Probabilistic Quantitative Bias Analysis for Misclassified Binary Variables and Binary Unmeasured Confounders},
+  author = {Fox, Matthew P and MacLehose, Richard F and Lash, Timothy L},
+  year = {2023},
+  month = oct,
+  journal = {International Journal of Epidemiology},
+  volume = {52},
+  number = {5},
+  pages = {1624--1633},
+  issn = {0300-5771},
+  doi = {10.1093/ije/dyad053},
+  urldate = {2024-09-02},
+  abstract = {Systematic error from selection bias, uncontrolled confounding, and misclassification is ubiquitous in epidemiologic research but is rarely quantified using quantitative bias analysis (QBA). This gap may in part be due to the lack of readily modifiable software to implement these methods. Our objective is to provide computing code that can be tailored to an analyst's dataset. We briefly describe the methods for implementing QBA for misclassification and uncontrolled confounding and present the reader with example code for how such bias analyses, using both summary-level data and individual record-level data, can be implemented in both SAS and R. Our examples show how adjustment for uncontrolled confounding and misclassification can be implemented. Resulting bias-adjusted point estimates can then be compared to conventional results to see the impact of this bias in terms of its direction and magnitude. Further, we show how 95\% simulation intervals can be generated that can be compared to conventional 95\% confidence intervals to see the impact of the bias on uncertainty. Having easy to implement code that users can apply to their own datasets will hopefully help spur more frequent use of these methods and prevent poor inferences drawn from studies that do not quantify the impact of systematic error on their results.},
+  file = {/home/work/Zotero/storage/LY36QW4U/Fox et al. - 2023 - SAS and R code for probabilistic quantitative bias analysis for misclassified binary variables and b.pdf;/home/work/Zotero/storage/H3YZYLUS/7152433.html}
+}
